chore: commented out the hieradataurl value in puppetserver helm chart, since that is only for example, so user can see and set in their own values file

--- a/argocd-helm-charts/puppetserver/values.yaml
+++ b/argocd-helm-charts/puppetserver/values.yaml
@@ -83,7 +83,8 @@ puppetserver:
     eyaml:
       existingSecret: eyaml-keys
     name: hiera
-    hieradataurl: "https://github.com/Obmondo/linuxaid-config-template.git"
+    # Add your linuxaid-config git repo here
+    # hieradataurl: "https://github.com/Obmondo/linuxaid-config-template.git"
 
   postgresql:
     enabled: false
