feat: removed static namespace name and let one to change the namespace using namespaceOverride

--- a/argocd-helm-charts/prometheus-linuxaid/templates/alertmanager-serviceAccount.yaml
+++ b/argocd-helm-charts/prometheus-linuxaid/templates/alertmanager-serviceAccount.yaml
@@ -5,4 +5,4 @@ metadata:
   labels:
     app.kubernetes.io/name: alertmanager
   name: alertmanager-main
-  namespace: monitoring-{{ .Values.customerid }}
+  namespace: {{ template "prometheus-linuxaid.namespace" . }}
