--- a/argocd-helm-charts/prometheus-linuxaid/templates/prometheus-roleConfig.yaml
+++ b/argocd-helm-charts/prometheus-linuxaid/templates/prometheus-roleConfig.yaml
@@ -2,7 +2,7 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
 metadata:
   name: prometheus-k8s-config
-  namespace: monitoring-{{ .Values.customerid }}
+  namespace: {{ template "prometheus-linuxaid.namespace" . }}
 rules:
 - apiGroups:
   - ""
