--- a/argocd-helm-charts/prometheus-linuxaid/templates/prometheus-serviceAccount.yaml
+++ b/argocd-helm-charts/prometheus-linuxaid/templates/prometheus-serviceAccount.yaml
@@ -3,4 +3,4 @@ automountServiceAccountToken: true
 kind: ServiceAccount
 metadata:
   name: prometheus-k8s
-  namespace: monitoring-{{ .Values.customerid }}
+  namespace: {{ template "prometheus-linuxaid.namespace" . }}
