--- a/argocd-helm-charts/prometheus-linuxaid/templates/alertmanager-main.yaml
+++ b/argocd-helm-charts/prometheus-linuxaid/templates/alertmanager-main.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: alertmanager-config-{{ .Values.customerid }}
-  namespace: monitoring-{{ .Values.customerid }}
+  namespace: {{ template "prometheus-linuxaid.namespace" . }}
 data:
   alertmanager.yaml: {{ toYaml .Values.alertmanager.config | b64enc | quote }}
 {{- range $key, $val := .Values.alertmanager.templateFiles }}
