--- a/argocd-helm-charts/prometheus-linuxaid/templates/alertmanager-service.yaml
+++ b/argocd-helm-charts/prometheus-linuxaid/templates/alertmanager-service.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: alertmanager-main
-  namespace: monitoring-{{ .Values.customerid }}
+  namespace: {{ template "prometheus-linuxaid.namespace" . }}
   labels:
     app.kubernetes.io/name: alertmanager
 spec:
