--- a/argocd-helm-charts/prometheus-linuxaid/templates/grafana-chain-middleware.yaml
+++ b/argocd-helm-charts/prometheus-linuxaid/templates/grafana-chain-middleware.yaml
@@ -2,7 +2,7 @@ apiVersion: traefik.io/v1alpha1
 kind: Middleware
 metadata:
   name: grafana-chain-{{ .Values.customerid }}
-  namespace: monitoring-{{ .Values.customerid }}
+  namespace: {{ template "prometheus-linuxaid.namespace" . }}
 spec:
   chain:
     middlewares:
