--- a/argocd-helm-charts/prometheus-linuxaid/templates/grafana-ingressroute.yaml
+++ b/argocd-helm-charts/prometheus-linuxaid/templates/grafana-ingressroute.yaml
@@ -2,7 +2,7 @@ apiVersion: traefik.io/v1alpha1
 kind: IngressRoute
 metadata:
   name: grafana-{{ .Values.customerid }}
-  namespace: monitoring-{{ .Values.customerid }}
+  namespace: {{ template "prometheus-linuxaid.namespace" . }}
 spec:
   entryPoints:
     - websecure
@@ -13,10 +13,10 @@ spec:
     services:
     - kind: Service
       name: grafana-{{ .Values.customerid }}-service
-      namespace: monitoring-{{ .Values.customerid }}
+      namespace: {{ template "prometheus-linuxaid.namespace" . }}
       passHostHeader: true
       port: grafana
       nativeLB: true
     middlewares:
       - name: grafana-chain-{{ .Values.customerid }}
-        namespace: monitoring-{{ .Values.customerid }}
+        namespace: {{ template "prometheus-linuxaid.namespace" . }}
