--- a/argocd-helm-charts/prometheus-linuxaid/templates/grafana-jwt-middleware.yaml
+++ b/argocd-helm-charts/prometheus-linuxaid/templates/grafana-jwt-middleware.yaml
@@ -3,7 +3,7 @@ apiVersion: traefik.io/v1alpha1
 kind: Middleware
 metadata:
   name: grafana-jwt-{{ .Values.customerid }}
-  namespace: monitoring-{{ .Values.customerid }}
+  namespace: {{ template "prometheus-linuxaid.namespace" . }}
 spec:
   plugin:
     jwt:
