--- a/argocd-helm-charts/prometheus-linuxaid/templates/grafana.yaml
+++ b/argocd-helm-charts/prometheus-linuxaid/templates/grafana.yaml
@@ -2,7 +2,7 @@ apiVersion: grafana.integreatly.org/v1beta1
 kind: Grafana
 metadata:
   name: grafana-{{ .Values.customerid }}
-  namespace: monitoring-{{ .Values.customerid }}
+  namespace: {{ template "prometheus-linuxaid.namespace" . }}
   labels:
     dashboards: "grafana"
 spec:
