--- a/argocd-helm-charts/prometheus-linuxaid/templates/ingress.yaml
+++ b/argocd-helm-charts/prometheus-linuxaid/templates/ingress.yaml
@@ -3,7 +3,7 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: {{ .Values.customerid }}
-  namespace: monitoring-{{ .Values.customerid }}
+  namespace: {{ template "prometheus-linuxaid.namespace" . }}
   annotations:
     kubernetes.io/ingress.class: traefik-cert-manager
     cert-manager.io/cluster-issuer: letsencrypt
