--- a/argocd-helm-charts/prometheus-linuxaid/templates/prometheus-ingressroute.yaml
+++ b/argocd-helm-charts/prometheus-linuxaid/templates/prometheus-ingressroute.yaml
@@ -2,7 +2,7 @@ apiVersion: traefik.io/v1alpha1
 kind: IngressRoute
 metadata:
   name: prometheus-{{ .Values.customerid }}
-  namespace: monitoring-{{ .Values.customerid }}
+  namespace: {{ template "prometheus-linuxaid.namespace" . }}
 spec:
   entryPoints:
     - websecure
@@ -13,7 +13,7 @@ spec:
     services:
     - kind: Service
       name: prometheus-main
-      namespace: monitoring-{{ .Values.customerid }}
+      namespace: {{ template "prometheus-linuxaid.namespace" . }}
       passHostHeader: true
       port: web
       nativeLB: true
