--- a/argocd-helm-charts/prometheus-linuxaid/templates/prometheus-service.yaml
+++ b/argocd-helm-charts/prometheus-linuxaid/templates/prometheus-service.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: prometheus-main
-  namespace: monitoring-{{ .Values.customerid }}
+  namespace: {{ template "prometheus-linuxaid.namespace" . }}
 spec:
   type: ClusterIP
   ports:
