--- a/argocd-helm-charts/prometheus-linuxaid/templates/prometheusRule-ntp-record.yaml
+++ b/argocd-helm-charts/prometheus-linuxaid/templates/prometheusRule-ntp-record.yaml
@@ -3,7 +3,7 @@ apiVersion: monitoring.coreos.com/v1
 kind: PrometheusRule
 metadata:
   name: ntp-record-rules
-  namespace: monitoring-{{ .Values.customerid }}
+  namespace: {{ template "prometheus-linuxaid.namespace" . }}
 spec:
   {{- $.Files.Get "records/ntp.yaml" | nindent 4 }}
 {{- end }}
