--- a/argocd-helm-charts/prometheus-linuxaid/templates/alertmanager-main.yaml
+++ b/argocd-helm-charts/prometheus-linuxaid/templates/alertmanager-main.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: alertmanager-config-{{ .Values.customerid }}
+  name: alertmanager-config
   namespace: {{ template "prometheus-linuxaid.namespace" . }}
 data:
   alertmanager.yaml: {{ toYaml .Values.alertmanager.config | b64enc | quote }}
