--- a/argocd-helm-charts/prometheus-linuxaid/templates/grafana-jwt-middleware.yaml
+++ b/argocd-helm-charts/prometheus-linuxaid/templates/grafana-jwt-middleware.yaml
@@ -2,7 +2,7 @@
 apiVersion: traefik.io/v1alpha1
 kind: Middleware
 metadata:
-  name: grafana-jwt-{{ .Values.customerid }}
+  name: grafana-jwt
   namespace: {{ template "prometheus-linuxaid.namespace" . }}
 spec:
   plugin:
