--- a/argocd-helm-charts/prometheus-linuxaid/templates/prometheus-ingressroute.yaml
+++ b/argocd-helm-charts/prometheus-linuxaid/templates/prometheus-ingressroute.yaml
@@ -1,14 +1,14 @@
 apiVersion: traefik.io/v1alpha1
 kind: IngressRoute
 metadata:
-  name: prometheus-{{ .Values.customerid }}
+  name: prometheus
   namespace: {{ template "prometheus-linuxaid.namespace" . }}
 spec:
   entryPoints:
     - websecure
   routes:
   - kind: Rule
-    match: Host(`{{ .Values.prometheus.server }}`) && PathPrefix(`/{{ .Values.customerid }}`)
+    match: Host(`{{ .Values.prometheus.server }}`) && PathPrefix(`/{{ .Values.prometheus.routePrefix }}`)
     priority: 10
     services:
     - kind: Service
