chore: some object name should depend on the default naming convention coming from the template func

--- a/argocd-helm-charts/prometheus-linuxaid/templates/ingress.yaml
+++ b/argocd-helm-charts/prometheus-linuxaid/templates/ingress.yaml
@@ -2,7 +2,7 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: {{ .Values.prometheus.server }}
+  name: {{ include "prometheus-linuxaid.fullname" . }}
   namespace: {{ template "prometheus-linuxaid.namespace" . }}
   annotations:
     {{- with .Values.deployment.annotations }}
