fix: removed the leading slash from prometheus linuxaid from ingressroute and grafana, prometheus object

--- a/argocd-helm-charts/prometheus-linuxaid/templates/grafana-ingressroute.yaml
+++ b/argocd-helm-charts/prometheus-linuxaid/templates/grafana-ingressroute.yaml
@@ -8,7 +8,7 @@ spec:
     - websecure
   routes:
   - kind: Rule
-    match: Host(`{{ .Values.grafana.server }}`) && PathPrefix(`/{{ .Values.prometheus.routePrefix }}`)
+    match: Host(`{{ .Values.grafana.server }}`) && PathPrefix(`{{ .Values.prometheus.routePrefix }}`)
     priority: 10
     services:
     - kind: Service
