--- a/argocd-helm-charts/prometheus-linuxaid/templates/grafana-datasource.yaml
+++ b/argocd-helm-charts/prometheus-linuxaid/templates/grafana-datasource.yaml
@@ -11,7 +11,7 @@ spec:
     name: prometheus
     type: prometheus
     access: proxy
-    url: http://prometheus-main:9090/{{ .Values.prometheus.routePrefix }}
+    url: http://prometheus-main:9090{{ .Values.prometheus.routePrefix }}
     isDefault: true
     jsonData:
       'timeInterval': "1m"
