--- a/argocd-helm-charts/prometheus-linuxaid/templates/grafana.yaml
+++ b/argocd-helm-charts/prometheus-linuxaid/templates/grafana.yaml
@@ -20,7 +20,7 @@ spec:
       header_property: "username"
       auto_sign_up: "true"
     server:
-      root_url: "https://{{ .Values.grafana.server }}/{{ .Values.prometheus.routePrefix }}"
+      root_url: "https://{{ .Values.grafana.server }}{{ .Values.prometheus.routePrefix }}"
       serve_from_sub_path: "true"
     users:
       allow_sign_up: "false"
