--- a/argocd-helm-charts/puppetserver/values.yaml
+++ b/argocd-helm-charts/puppetserver/values.yaml
@@ -18,6 +18,8 @@ puppetserver:
     image: ghcr.io/voxpupuli/container-puppetserver
     tag: 7.17.0-v1.5.0
     masters:
+      fqdns:
+        alternateServerNames:
       extraEnv:
         PUPPETSERVER_JAVA_ARGS: "-Xms512m -Xmx2500m -XX:+HeapDumpOnOutOfMemoryError"
         PUPPETDB_JAVA_ARGS: "-Xms256m -Xmx256m -XX:+HeapDumpOnOutOfMemoryError"
@@ -111,6 +113,8 @@ puppetserver:
         cpu: 250m
       limits:
         memory: 1024Mi
+    fqdns:
+      alternateServerNames:
     extraEnv:
       PUPPETDB_POSTGRES_HOSTNAME: puppetserver-pgsql-rw
       PUPPETDB_JAVA_ARGS: "-Xms512m -Xmx2500m -XX:+HeapDumpOnOutOfMemoryError"
