--- a/argocd-helm-charts/rabbitmq-operator/values.yaml
+++ b/argocd-helm-charts/rabbitmq-operator/values.yaml
@@ -1,6 +1,21 @@
 rabbitmq-cluster-operator:
+  rabbitmqImage:
+    registry: docker.io
+    repository: bitnamilegacy/rabbitmq
+    tag: 4.1.3-debian-12-r1
+    digest: ""
+  credentialUpdaterImage:
+    registry: docker.io
+    repository: bitnamilegacy/rmq-default-credential-updater
+    tag: 1.0.8-debian-12-r0
+    digest: ""
   useCertManager: "true"
   clusterOperator:
+    image:
+      registry: docker.io
+      repository: bitnamilegacy/rabbitmq-cluster-operator
+      tag: 2.16.1-debian-12-r0
+      digest: ""
     podSecurityContext:
       enabled: true
       fsGroup: 1001
@@ -21,6 +36,11 @@ rabbitmq-cluster-operator:
         cpu: 100m
         memory: 250Mi
   msgTopologyOperator:
+    image:
+      registry: docker.io
+      repository: bitnamilegacy/rmq-messaging-topology-operator
+      tag: 1.17.4-debian-12-r0
+      digest: ""
     podSecurityContext:
       enabled: true
       fsGroup: 1001
