fix: reverse the logic for ingressroute, that it should setup only when routePrefix is not default

--- a/argocd-helm-charts/prometheus-linuxaid/templates/prometheus-ingressroute.yaml
+++ b/argocd-helm-charts/prometheus-linuxaid/templates/prometheus-ingressroute.yaml
@@ -1,4 +1,4 @@
-{{- if eq .Values.prometheus.routePrefix "/" }}
+{{- if ne .Values.prometheus.routePrefix "/" }}
 apiVersion: traefik.io/v1alpha1
 kind: IngressRoute
 metadata:
