fix: grafana ingressroute should be setup only when routePrefix is not set to default

--- a/argocd-helm-charts/prometheus-linuxaid/templates/grafana-ingressroute.yaml
+++ b/argocd-helm-charts/prometheus-linuxaid/templates/grafana-ingressroute.yaml
@@ -1,3 +1,4 @@
+{{- if ne .Values.prometheus.routePrefix "/" }}
 apiVersion: traefik.io/v1alpha1
 kind: IngressRoute
 metadata:
@@ -20,3 +21,4 @@ spec:
     middlewares:
       - name: grafana-chain
         namespace: {{ template "prometheus-linuxaid.namespace" . }}
+{{- end }}
