--- a/argocd-helm-charts/prometheus-linuxaid/templates/grafana-ingress.yaml
+++ b/argocd-helm-charts/prometheus-linuxaid/templates/grafana-ingress.yaml
@@ -2,7 +2,7 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: {{ include "prometheus-linuxaid.fullname" . }}
+  name: grafana-{{ include "prometheus-linuxaid.fullname" . }}
   namespace: {{ template "prometheus-linuxaid.namespace" . }}
   annotations:
     {{- with .Values.grafana.annotations }}
