--- a/argocd-helm-charts/oncall/values.yaml
+++ b/argocd-helm-charts/oncall/values.yaml
@@ -80,6 +80,9 @@ rabbitmq:
     requests:
       cpu: 100m
       memory: 2Gi
+  image:
+    repository: bitnamilegacy/rabbitmq
+    tag: 3.12.0-debian-11-r0
 
 postgresql:
   instance: 2
