--- a/argocd-helm-charts/prometheus-linuxaid/values.yaml
+++ b/argocd-helm-charts/prometheus-linuxaid/values.yaml
@@ -5,10 +5,10 @@ prometheus:
   namespaceOverride: ""
   version: v2.54.1
   ingress:
-    enable: false
-    annotations:
-      kubernetes.io/ingress.class: traefik
-      cert-manager.io/cluster-issuer: letsencrypt
+    enabled: false
+    annotations: {}
+    ingressClassName: ""
+    domain: ""
   storage:
     size: 30Gi
     className: rook-ceph-block
@@ -28,8 +28,15 @@ prometheus:
     failureThreshold: 240
   externalUrl: /
   routePrefix: /
+
 grafana:
   version: 11.1.4
+  ingress:
+    enabled: false
+    annotations: {}
+    ingressClassName: ""
+    domain: ""
+
 prometheusRule:
   domain: true
   dns: true
@@ -65,8 +72,14 @@ prometheusRule:
   zfs: true
   smartmon: true
   gitlab_runner: true
+
 alertmanager:
   version: v0.27.0
+  ingress:
+    enabled: false
+    annotations: {}
+    ingressClassName: ""
+    domain: ""
   config:
     global:
       resolve_timeout: 5m
@@ -99,34 +112,7 @@ alertmanager:
       group_wait: 10s
       group_interval: 10s
       repeat_interval: 1h
-      receiver: "obmondo"
-      routes:
-        - receiver: "obmondo"
-          matchers:
-            - "alertname = Watchdog"
-          repeat_interval: 5m
-        - receiver: "null"
-          matchers:
-            - "namespace =~ testing|obmondo-ci"
-        - receiver: "null"
-          matchers:
-            - "alertname = InfoInhibitor"
-        - receiver: obmondo
-          continue: true
 
-    receivers:
-      - name: "null"
-      - name: obmondo
-        webhook_configs:
-          - url: https://alerts.obmondo.com/hooks/alertmanager
-            send_resolved: true
-            max_alerts: 0
-            http_config:
-              tls_config:
-                server_name: alerts.obmondo.com
-                cert_file: /etc/alertmanager/secrets/puppet-agent-tls-auth/tls.crt
-                key_file: /etc/alertmanager/secrets/puppet-agent-tls-auth/tls.key
-                insecure_skip_verify: false
 middleware:
   jwt:
     enabled: false
