is this enough to default to a storage PV that can be mounted by multiple pods?

--- a/argocd-helm-charts/harbor/values.yaml
+++ b/argocd-helm-charts/harbor/values.yaml
@@ -3,6 +3,7 @@ harbor:
   persistence:
     enabled: true
     persistentVolumeClaim:
+      accessMode: ReadWriteMany
       registry:
         size: 20Gi
   core:
