fix: use puppetdb as a database name, since openvox comes with openvox db name as a default

--- a/argocd-helm-charts/openvox/values.yaml
+++ b/argocd-helm-charts/openvox/values.yaml
@@ -112,6 +112,7 @@ puppetserver:
       alternateServerNames:
     extraEnv:
       OPENVOXDB_POSTGRES_HOSTNAME: puppetserver-pgsql-rw
+      OPENVOXDB_POSTGRES_DATABASE: puppetdb
       OPENVOXDB_JAVA_ARGS: "-Xms512m -Xmx2500m -XX:+HeapDumpOnOutOfMemoryError"
 
   puppetboard:
