--- a/argocd-helm-charts/openvox/values.yaml
+++ b/argocd-helm-charts/openvox/values.yaml
@@ -117,7 +117,7 @@ puppetserver:
 
   puppetboard:
     enabled: true
-    image: 6.0.1
+    tag: 6.0.1
     name: puppetboard
     extraEnv:
       PUPPETBOARD_WORKERS: 2
