--- a/argocd-helm-charts/prometheus-linuxaid/templates/alertmanager.yaml
+++ b/argocd-helm-charts/prometheus-linuxaid/templates/alertmanager.yaml
@@ -20,4 +20,6 @@ spec:
   version: {{ .Values.alertmanager.version }}
   configSecret: alertmanager-config
   secrets:
-  - puppet-agent-tls-auth
+  {{- range .Values.alertmanager.secrets }}
+  - {{ . }}
+  {{- end }}
