--- a/argocd-helm-charts/prometheus-linuxaid/templates/alertmanager-config-secret.yaml
+++ b/argocd-helm-charts/prometheus-linuxaid/templates/alertmanager-config-secret.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.alertmanager.enabled -}}
 apiVersion: v1
 kind: Secret
 metadata:
@@ -7,4 +8,5 @@ data:
   alertmanager.yaml: {{ toYaml .Values.alertmanager.config | b64enc | quote }}
 {{- range $key, $val := .Values.alertmanager.templateFiles }}
   {{ $key }}: {{ $val | b64enc | quote }}
+{{- end }}
 {{- end }}
