--- a/argocd-helm-charts/prometheus-linuxaid/templates/alertmanager-ingress.yaml
+++ b/argocd-helm-charts/prometheus-linuxaid/templates/alertmanager-ingress.yaml
@@ -1,4 +1,4 @@
-{{- if .Values.alertmanager.ingress.enabled -}}
+{{- if and .Values.alertmanager.enabled .Values.alertmanager.ingress.enabled -}}
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
