--- a/argocd-helm-charts/prometheus-linuxaid/templates/alertmanager-serviceAccount.yaml
+++ b/argocd-helm-charts/prometheus-linuxaid/templates/alertmanager-serviceAccount.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.alertmanager.enabled -}}
 apiVersion: v1
 automountServiceAccountToken: false
 kind: ServiceAccount
@@ -6,3 +7,4 @@ metadata:
     app.kubernetes.io/name: alertmanager
   name: alertmanager-main
   namespace: {{ template "prometheus-linuxaid.namespace" . }}
+{{- end }}
