--- a/argocd-helm-charts/openvox/templates/puppetdb-ingressroutetcp.yaml
+++ b/argocd-helm-charts/openvox/templates/puppetdb-ingressroutetcp.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.puppetserver.puppetdb.fqdns.alternateServerNames }}
 apiVersion: traefik.io/v1alpha1
 kind: IngressRouteTCP
 metadata:
@@ -11,6 +12,6 @@ spec:
     services:
     - name: {{ include "puppetserver.serviceName" (dict "root" . "service" "puppetdb") }}
       port: pdb-https
-
   tls:
     passthrough: true
+{{- end }}
