fix: run r10k as a diff pod, if r10k dies, puppet client would fail to connect to puppetserver, since liveness is broken

--- a/argocd-helm-charts/openvox/values.yaml
+++ b/argocd-helm-charts/openvox/values.yaml
@@ -80,6 +80,7 @@ puppetserver:
       code:
         size: 8Gi
   r10k:
+    asSidecar: false
     code:
       cronJob:
         schedule: "*/2 * * * *"
